5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1671_1101.log
== TEST (2019-04-28 10:40:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("comsumo de energia em kWh")
t = input("tipo de instalaçao")
if ():
			 
			 

			 
-- ERROR:
File "XXXX", line 5
    t = input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:43:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
c = float(input("consumo de energia em kWh")
t = input("tipo de instalacao")
if (c <= 500) and ( t == R):
			 print("Entradas:", c, "kWh")
			 
			 

			 
-- ERROR:
File "XXXX", line 5
    t = input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
